<resources>
    <string name="app_name" translatable="false">UCSoftPhone</string>
    <string name="app_online">Online</string>
    <string name="app_offline">Offline</string>
    <string name="app_login">Sign in</string>
    <string name="app_incall">Call</string>
    <string name="activity_login_advance">Advanced</string>
    <string name="activity_login_username_hint">Username</string>
    <string name="activity_login_pwd_hint">Password</string>
    <string name="activity_login_domain_hint" translatable="false">SIP Domain</string>
    <string name="activity_login_rememberme">Remember me</string>
    <string name="login_input_tips">Please fill in all mandatory fields</string>
    <string name="login_login_tips">Sign in...</string>
    <string name="network_not_availabe">Network not Available!</string>
    <string name="scanner_tilte">QRCode Scanner</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="msg_camera_framework_bug">Can not open camera.</string>
    <string name="title_about">About</string>
    <string name="activity_about_ver">V8.0.0</string>
    <string name="activity_about_homeurl"></string>
    <string name="activity_about_sdk_ver">Built base on SDK</string>
    <string name="activity_about_company"></string>
    <string name="activity_about_company_copyright"></string>
    <string name="activity_advance_category_displayname">DISPLAY NAME</string>
    <string name="activity_advance_category_additional">ACCOUNT ADDITIONAL</string>
    <string name="activity_advance_category_proxy">OUTBOUND PROXY</string>
    <string name="activity_advance_category_transport">TRANSPORT PROTOCOL</string>
    <string name="activity_advance_category_stun" translatable="false">STUN</string>
    <string name="activity_advance_category_impresence" translatable="false">IM AND PRESENCE</string>
    <string name="activity_advance_category_tlscert" translatable="false">TLS CERT MANAGEMENT</string>
    <string name="category_allowvoip">MOBILE NETWORK</string>
    <string name="title_allowvoip">Mobile Network</string>
    <string name="minmax_limit">min:90 max:3600</string>
    <string name="activity_advance_title_displayname">Display as</string>
    <string name="activity_advance_title_tlscert" translatable="false">Verify TLS Cert</string>
    <string name="activity_advance_title_proxy_server">Outbound Proxy</string>
    <string name="activity_advance_title_proxy_authname">Auth Name</string>
    <string name="activity_advance_title_transport_udp" translatable="false">UDP</string>
    <string name="activity_advance_title_transport_tcp" translatable="false">TCP</string>
    <string name="activity_advance_title_transport_tls" translatable="false">TLS</string>
    <string name="activity_advance_title_transport_pers_udp" translatable="false">PERS_UDP</string>
    <string name="activity_advance_title_transport_pers_tcp" translatable="false">PERS_TCP</string>
    <string name="activity_advance_title_proxy_tips">[domain is the default]</string>
    <string name="activity_advance_title_author_tips">[username is the default]</string>
    <string name="activity_advance_title_disname_tips">[username is the default]</string>
    <string name="activity_advance_title_stun_enable">Enable STUN</string>
    <string name="activity_advance_title_stun_server">Server </string>
    <string name="activity_advance_title_stun_port">Port </string>
    <string name="activity_advance_title_presence_enable">Presence Proxy</string>
    <string name="activity_advance_title_publish_refresh">Publish Refresh Interval (seconds)</string>
    <string name="activity_advance_title_sub_refresh">Subscribe Refresh Interval (seconds)</string>
    <string name="activity_advance_title_enable_log">Enable Logging</string>
    <string name="activity_advance_title_about">About</string>
    <string name="toomanycalls">A maximum of two concurrent calls allowed only.</string>
    <string name="portgo_title_contact">Contacts</string>
    <string name="portgo_title_history">Recents</string>
    <string name="portgo_title_numberpad">Dialpad</string>
    <string name="portgo_title_message">Messages</string>
    <string name="portgo_title_setting">Settings</string>
    <string name="contact_tab_all">All</string>
    <string name="contact_tab_favorite">Favorites</string>
    <string name="contact_tab_friend">Friends</string>
    <string name="contact_select_contact">Please select contact(s)</string>
    <string name="contact_selected_contact">"%d contact(s) selected"</string>
    <string name="contact_clear">Clear</string>
    <string name="contact_all">Select All</string>
    <string name="permission_help_title">Permission</string>
    <string name="permission_help_content">Allow %1$s to: \n\nRead/Write to Contacts
        \nEnable Recorder, Enable Camera\nWrite to Storage\nDisplay over other apps </string>
    <string name="permission_help_quit">Exit</string>
    <string name="permission_help_setting">Setting</string>
    <string name="refer_title">Refer</string>
    <string name="refer_tips">%1$s Requests to transfer to %2$s</string>
    <string name="contact_detail">Details</string>
    <string name="activity_main_contact_fragment_detail_edit">Edit</string>
    <string name="activity_main_contact_fragment_detail_addfavorite">Add to Favorites</string>
    <string name="activity_main_contact_fragment_detail_rmfavorite">Remove from Favorites</string>
    <string name="friend_detail">Details</string>
    <string name="hisroty_fragment_detail_newcontact">New Contact</string>
    <string name="hisroty_fragment_detail_addtocontact">Add to Existing Contact</string>
    <string name="edit_fragment_editcontact">Edit Contact</string>
    <string name="edit_fragment_editfriend">Edit Friend</string>
    <string name="edit_fragment_addcontact">Create Contact</string>
    <string name="edit_fragment_addfriend">Create Friend</string>
    <string name="edit_fragment_finish">Save</string>
    <string name="select_no_number">None</string>
    <string name="request_friend_im">Please enter at least one SIP account(s), and choose one of them for IM/SMS</string>
    <string name="invalidate_contact_data">Invalid contact info, failed to save.</string>
    <string name="activity_main_contact_no_name">John Doe</string>
    <string name="activity_main_contact_fragment_edit_sipim">IM/SMS</string>
    <string name="activity_main_contact_fragment_edit_addphone">add phone</string>
    <string name="activity_main_contact_fragment_edit_addsip">add VoIP number</string>
    <string name="contact_fragment_edit_delete">Delete Contact</string>
    <string name="contact_name_null">Contact name cannot be empty</string>
    <string name="contact_fragment_edit_numtype">Please choose a phone type</string>
    <string name="activity_main_contact_fragment_edit_newType">Personalised label</string>
    <string name="phone_selected">Choosing Recipients</string>
    <string name="invalidate_phone_number">Please select at least one valid number</string>
    <string name="tab_history_all">All</string>
    <string name="tab_history_unreceived">Missed</string>
    <string name="phone_type_sip">VoIP Call</string>
    <string name="phone_type_phone">Mobile</string>
    <string name="title_historydetail">Details</string>
    <string name="history_fragment_detail_newcontact">New Contact</string>
    <string name="history_fragment_detail_showmore">View More</string>
    <string name="history_fragment_detail_showless">Collapse</string>
    <string name="history_fragment_detail_limit" translatable="false">_id desc LIMIT %1$d OFFSET 0</string>
    <string name="callin">Incoming</string>
    <string name="callout">Outgoing</string>
    <string name="unconnect">Cancelled</string>
    <string name="history_fragment_detail_not_favorite">Favorites</string>
    <string name="history_fragment_detail_in_favorite">Favorites</string>
    <string name="title_codec">Codecs</string>
    <string name="activity_main_fragment_setting_codec_edit_finish">Finish</string>
    <string name="activity_main_fragment_setting_codec_edit_edit">Edit</string>
    <string name="setting_fragment_codec_premum_desc">Available as a premium feature</string>
    <string name="set_status">Status</string>
    <string name="set_account">Account</string>
    <string name="set_balance">Balance</string>
    <string name="set_set">Advanced</string>
    <string name="set_codecs">Codecs</string>
    <string name="set_about">About</string>
    <string name="set_premium">Premium Fetures</string>
    <string name="title_premium">Premium</string>
    <string name="premium_price">$9.99</string>
    <string name="not_premium">Purchase failed.</string>
    <string name="title_account">Account</string>
    <string name="activity_main_fragment_setting_account_username">Username</string>
    <string name="activity_main_fragment_setting_account_userpsw">Password</string>
    <string name="activity_main_fragment_setting_account_userbalance">Balance</string>
    <string name="activity_main_fragment_setting_account_sipserver">SIP Server</string>
    <string name="activity_main_fragment_setting_account_sipport">Port Number</string>
    <string name="activity_main_fragment_setting_account_siptranstype">Transport Protocol</string>
    <string name="activity_main_fragment_setting_account_userdomain">Domain Name</string>
    <string name="activity_main_fragment_setting_account_userdisname">Display as</string>
    <string name="activity_main_fragment_setting_account_userauth">Authentication Name</string>
    <string name="activity_main_fragment_setting_account_unregister">Sign out</string>
    <string name="empty_numaber_tips">Please enter number</string>
    <string name="empty_voicemail_tips">Please set voicemail address first!</string>
    <string name="activity_main_fragment_callrulelable_name">Name</string>
    <string name="activity_main_fragment_callrulelable_match_prefix">Match Prefix</string>
    <string name="activity_main_fragment_callrulelable_remove_prefix">Remove Prefix</string>
    <string name="activity_main_fragment_callrulelable_add_prefix">Add Prefix</string>
    <string name="activity_main_fragment_callrule_name_hint">description</string>
    <string name="activity_main_fragment_callrule_match_hint">e.g. +173</string>
    <string name="activity_main_fragment_callrule_add_hint">e.g. +1</string>
    <string name="activity_main_fragment_callrule_remove_hint">e.g. 8</string>
    <string name="category_callfoward">Call Transfer</string>
    <string name="labe_callfoward">Call Forwarding</string>
    <string name="callfoward_to">Forward to:</string>
    <string name="labe_voicemail">Voicemail:</string>
    <string name="string_voicemail">Voicemail</string>
    <string name="lable_fragment_account_foward_noanswer">No answer transfer </string>
    <string name="title_forward">Transfer </string>
    <string name="lable_fragment_account_foward_close">Do not Transfer </string>
    <string name="lable_fragment_account_foward_all">Transfer all calls</string>
    <string name="lable_fragment_account_foward_busy">Busy transfer</string>
    <string name="lable_fragment_account_nodistrub">Do Not Disturb</string>
    <string name="nodisturb_tips">Once "Do Not Disturb" is enabled, you will not receive any calls or messages!</string>
    <string name="lable_fragment_account_foward_noanswertime">No Answer Time(s):</string>
    <string name="hint_fragment_setting_advance_redirect">min:max:</string>
    <string name="hint_min_sencod">Minimum value is 3 seconds</string>
    <string name="category_premium">Premium Fetures</string>
    <string name="fragment_setting_advance_premium_title">H.264,AMR-WB codec</string>
    <string name="fragment_setting_advance_premium_desc">H.264 High quality/low bandwidth video codec
    \nAdd superior HD audio quality under adverse network conditions with AMRWB.</string>
</resources>